# pxpls

./: .gitmodules  CMakeLists.txt  CmakeLists.txt  README.md
demo/: CMakeLists.txt
demo/2D/: CMakeLists.txt  collision.cpp  spring.cpp
demo/3D/: CMakeLists.txt  collision.cpp
demo/tools/: seformat.h
demo2D/: CMakeLists.txt  CmakeLists.txt  collision.cpp  main.cpp  spring.cpp
pxpls/: CMakeLists.txt  CmakeLists.txt  Collider.cpp  Collider.hpp  PhysicalObj.cpp  PhysicalObj.hpp  PhysicsWorld.cpp  RigidBody.cpp  RigidBody.hpp  Transform.cpp  mathpls.h  pxpls.h
pxpls/2D/: Collision2D.cpp  Collision2D.hpp  Dynamic2D.cpp  Dynamic2D.hpp  PhysicsWorld2D.cpp  PhysicsWorld2D.hpp  Solver2D.cpp  Solver2D.hpp  Spring2D.cpp  Spring2D.hpp  Transform2D.h
pxpls/3D/: Collider.cpp  Collider.hpp  Collision.cpp  Collision.hpp  Dynamic.cpp  Dynamic.hpp  Geometry.cpp  Geometry.hpp  PhysicalObj.hpp  PhysicsWorld.cpp  PhysicsWorld.hpp  RigidBody.cpp  RigidBody.hpp  Solver.cpp  Solver.hpp  Transform.h  Transform.hpp
pxpls/math/: mathpls.h
test/: main.cpp
